fixed nav bar css spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,7 @@
 
  // Partials - main css files
  @import "partials/layout/*";
+
+ body {
+   margin-top: 50px;
+ }
