--- a/app/assets/stylesheets/partials/layout/nav.scss
+++ b/app/assets/stylesheets/partials/layout/nav.scss
@@ -1,10 +1,13 @@
 .navbar-default, .navbar-toggle:focus, .collapsed, button.navbar-toggle {
   background: $navbarColor !important;
+  padding-top: 12px;
   border: none;
-  a {
+  body {
     font-family: 'Lato', sans-serif;
+  }
+  a {
     color: white !important;
-    padding: 1em .5em;
+    padding: 1em 4.5em;
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: -1px;
@@ -13,7 +16,16 @@
   }
   nav {
     .navbar-header {
-      width:100%;
+      width: 100%;
+      button, .navbar-brand {
+        transition: opacity 0.15s;
+      }
+      button {
+        margin-right: 0;
+      }
+      button:hover, .navbar-brand:hover {
+        opacity: 0.8;
+      }
     }
   }
 }
